// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Details default 1`] = `
<div
  className="details"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="title"
    onClick={[Function]}
  />
  <div
    className="collapse"
    style={Object {}}
  >
    <div />
  </div>
</div>
`;

exports[`Storyshots Filter Economic Development 1`] = `
<div
  className="filter"
>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Economic Clusters
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      TOD Sites
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      CDAs and RDAs
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Opportunity Zones
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Centers
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      General Land Use
    </label>
  </div>
</div>
`;

exports[`Storyshots Filter Land Use 1`] = `
<div
  className="filter"
>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={false}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Projections (2050)
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            name="Projections (2050)"
            onChange={[Function]}
            type="radio"
          />
          Employment
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={false}
            className="form-check-input"
            name="Projections (2050)"
            onChange={[Function]}
            type="radio"
          />
          Population
        </label>
      </div>
    </div>
  </div>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={false}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Workplace Accessibility (2019)
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            name="Workplace Accessibility (2019)"
            onChange={[Function]}
            type="radio"
          />
          Auto
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={false}
            className="form-check-input"
            name="Workplace Accessibility (2019)"
            onChange={[Function]}
            type="radio"
          />
          Transit
        </label>
      </div>
    </div>
  </div>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Land Use
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Centers
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          General Land Use
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Green Space
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Filter Recreation 1`] = `
<div
  className="filter"
>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Community Centers
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Trails
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Parks
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Federal Lands
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Golf Courses
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Ski Areas
    </label>
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label"
    >
      <input
        checked={true}
        className="form-check-input"
        onChange={[Function]}
        type="checkbox"
      />
      Green Space
    </label>
  </div>
</div>
`;

exports[`Storyshots Filter Transportation 1`] = `
<div
  className="filter"
>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Project Modes
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Roads
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Transit
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Bike/Ped
        </label>
      </div>
    </div>
  </div>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Phasing (colors)
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Phase 1 (2019-30)
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Phase 2 (2031-40)
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Phase 3 (2041-50)
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Unfunded Needs
        </label>
      </div>
    </div>
  </div>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Land Use
      </label>
      <label
        className="form-check-label"
      >
        <input
          checked={false}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        <small>
          (filter by phasing)
        </small>
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Centers
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          General Land Use
        </label>
      </div>
    </div>
  </div>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Other
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Existing Bike/Ped
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Existing Transit
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Filter Vision 1`] = `
<div
  className="filter"
>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Transportation
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Roads
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Transit
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Bike/Ped
        </label>
      </div>
    </div>
  </div>
  <div
    className="group-container"
  >
    <div
      className="form-check"
    >
      <label
        className="form-check-label"
      >
        <input
          checked={true}
          className="form-check-input"
          onChange={[Function]}
          type="checkbox"
        />
        Land Use
      </label>
    </div>
    <div
      className="child-checkbox-container"
    >
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          Centers
        </label>
      </div>
      <div
        className="form-check"
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            className="form-check-input"
            onChange={[Function]}
            type="checkbox"
          />
          General Land Use
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MapWidget Filter 1`] = `
<div>
  <div
    className="map-widget-button esri-widget--button"
    onClick={[Function]}
    title="Filter"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-list fa-w-16 "
      data-icon="list"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M80 368H16a16 16 0 0 0-16 16v64a16 16 0 0 0 16 16h64a16 16 0 0 0 16-16v-64a16 16 0 0 0-16-16zm0-320H16A16 16 0 0 0 0 64v64a16 16 0 0 0 16 16h64a16 16 0 0 0 16-16V64a16 16 0 0 0-16-16zm0 160H16a16 16 0 0 0-16 16v64a16 16 0 0 0 16 16h64a16 16 0 0 0 16-16v-64a16 16 0 0 0-16-16zm416 176H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-320H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16zm0 160H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  <div
    className="map-widget-card card"
    style={
      Object {
        "bottom": "7px",
        "display": "flex",
        "top": "calc(50% - 7px)",
      }
    }
  >
    <div
      className="card-header"
    >
      Filter
      <div
        className="buttons-container"
      >
        <button
          aria-label={null}
          className="reset-button btn btn-link"
          onClick={[Function]}
        >
          <small>
            reset
          </small>
        </button>
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
          >
            ×
          </span>
        </button>
      </div>
    </div>
    <div
      className="card-body"
    >
      child widget content
    </div>
  </div>
</div>
`;

exports[`Storyshots MapWidget Project Information 1`] = `
<div>
  <div
    className="map-widget-button esri-widget--button"
    onClick={[Function]}
    title="Project Information"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-hand-pointer fa-w-14 "
      data-icon="hand-pointer"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M448 240v96c0 3.084-.356 6.159-1.063 9.162l-32 136C410.686 499.23 394.562 512 376 512H168a40.004 40.004 0 0 1-32.35-16.473l-127.997-176c-12.993-17.866-9.043-42.883 8.822-55.876 17.867-12.994 42.884-9.043 55.877 8.823L104 315.992V40c0-22.091 17.908-40 40-40s40 17.909 40 40v200h8v-40c0-22.091 17.908-40 40-40s40 17.909 40 40v40h8v-24c0-22.091 17.908-40 40-40s40 17.909 40 40v24h8c0-22.091 17.908-40 40-40s40 17.909 40 40zm-256 80h-8v96h8v-96zm88 0h-8v96h8v-96zm88 0h-8v96h8v-96z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
  <div
    className="map-widget-card card"
    style={
      Object {
        "bottom": "7px",
        "display": "flex",
        "top": "calc(50% - 7px)",
      }
    }
  >
    <div
      className="card-header"
    >
      Project Information
      <div
        className="buttons-container"
      >
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
          >
            ×
          </span>
        </button>
      </div>
    </div>
    <div
      className="card-body"
    >
      child widget content
    </div>
  </div>
</div>
`;

exports[`Storyshots QueryFilterField Default 1`] = `
<div>
  <div
    className="query-filter"
  >
    <div
      className="query-filter-field"
    >
      <button
        aria-label={null}
        className="btn btn-link"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-chevron-down fa-w-14 "
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Funding Program
      </button>
      <br />
      <div
        className="collapse show"
        style={Object {}}
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          CMAQ
           
          <div
            className="swatch"
            style={
              Object {
                "backgroundColor": "rgb(255, 128, 0)",
              }
            }
          />
        </label>
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          STP
           
          <div
            className="swatch"
            style={
              Object {
                "backgroundColor": "rgb(20, 178, 179)",
              }
            }
          />
        </label>
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          TAP
           
          <div
            className="swatch"
            style={
              Object {
                "backgroundColor": "rgb(56, 168, 0)",
              }
            }
          />
        </label>
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          Other
           
          <div
            className="swatch"
            style={
              Object {
                "backgroundColor": "rgb(255, 100, 155)",
              }
            }
          />
        </label>
      </div>
    </div>
    <div
      className="query-filter-field"
    >
      <button
        aria-label={null}
        className="btn btn-link"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-chevron-right fa-w-10 "
          data-icon="chevron-right"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Year
      </button>
      <br />
      <div
        className="collapse"
        style={Object {}}
      >
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          Before 2020
           
        </label>
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          2020
           
        </label>
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          2021
           
        </label>
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          2022
           
        </label>
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          2023
           
        </label>
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          2024
           
        </label>
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          2025
           
        </label>
        <label
          className="form-check-label"
        >
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          2026
           
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Symbols Classes - Breaks 1`] = `
<div
  className="symbol-container"
>
  <div
    className="swatch-class-container"
  />
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-question-circle fa-w-16 "
    data-icon="question-circle"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots Symbols Classes - Unique Values 1`] = `
<div
  className="symbol-container"
>
  <div
    className="swatch-class-container"
  />
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-question-circle fa-w-16 "
    data-icon="question-circle"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`Storyshots TabPicker Max Reached 1`] = `
Array [
  <div
    className="react-dual-listbox rdl-has-header"
    id="tab-picker"
  >
    <div
      className="rdl-list-box rdl-available"
    >
      <label
        className="rdl-control-label"
        htmlFor="tab-picker-available"
      >
        Other Available Maps
      </label>
      <div
        className="rdl-control-container"
      >
        <select
          className="rdl-control"
          disabled={false}
          id="tab-picker-available"
          multiple={true}
          onChange={[Function]}
          onDoubleClick={[Function]}
          onKeyUp={[Function]}
          value={Array []}
        >
          <option
            data-real-value="\\"three\\""
            id="tab-picker-option-three"
            value="three"
          >
            Third One
          </option>
          <option
            data-real-value="\\"four\\""
            id="tab-picker-option-four"
            value="four"
          >
            Fourth One
          </option>
          <option
            data-real-value="\\"eight\\""
            id="tab-picker-option-eight"
            value="eight"
          >
            Eighth One
          </option>
        </select>
      </div>
    </div>
    <div
      className="rdl-actions"
    >
      <div
        className="rdl-actions-right"
      >
        <button
          className="rdl-move rdl-move-all rdl-move-right"
          disabled={false}
          id="tab-picker-move-all-right"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-right"
          />
          <span
            className="fa fa-chevron-right"
          />
        </button>
        <button
          className="rdl-move rdl-move-right"
          disabled={false}
          id="tab-picker-move-right"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-right"
          />
        </button>
      </div>
      <div
        className="rdl-actions-left"
      >
        <button
          className="rdl-move rdl-move-left"
          disabled={false}
          id="tab-picker-move-left"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-left"
          />
        </button>
        <button
          className="rdl-move rdl-move-all rdl-move-left"
          disabled={false}
          id="tab-picker-move-all-left"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-left"
          />
          <span
            className="fa fa-chevron-left"
          />
        </button>
      </div>
    </div>
    <div
      className="rdl-list-box rdl-selected"
    >
      <label
        className="rdl-control-label"
        htmlFor="tab-picker-selected"
      >
        Maps Displayed (max=6)
      </label>
      <div
        className="rdl-control-container"
      >
        <select
          className="rdl-control"
          disabled={false}
          id="tab-picker-selected"
          multiple={true}
          onChange={[Function]}
          onDoubleClick={[Function]}
          onKeyUp={[Function]}
          value={Array []}
        >
          <option
            data-index={0}
            data-real-value="\\"two\\""
            id="tab-picker-option-two"
            value="two"
          >
            Second One
          </option>
          <option
            data-index={1}
            data-real-value="\\"one\\""
            id="tab-picker-option-one"
            value="one"
          >
            First One
          </option>
          <option
            data-index={2}
            data-real-value="\\"five\\""
            id="tab-picker-option-five"
            value="five"
          >
            Fifth One
          </option>
          <option
            data-index={3}
            data-real-value="\\"six\\""
            id="tab-picker-option-six"
            value="six"
          >
            Sixth One
          </option>
          <option
            data-index={4}
            data-real-value="\\"seven\\""
            id="tab-picker-option-seven"
            value="seven"
          >
            Seventh One
          </option>
        </select>
      </div>
    </div>
    <div
      className="rdl-actions"
    >
      <button
        className="rdl-move rdl-move-up"
        disabled={false}
        id="tab-picker-move-up"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fa fa-chevron-up"
        />
      </button>
      <button
        className="rdl-move rdl-move-down"
        disabled={false}
        id="tab-picker-move-down"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fa fa-chevron-down"
        />
      </button>
    </div>
    <input
      disabled={false}
      name={null}
      type="hidden"
      value="two,one,five,six,seven"
    />
  </div>,
  <br />,
  <div
    className="alert alert-warning fade"
    role="alert"
  >
    A maximum of five tabs may be selected.
  </div>,
  "Selected Ids:",
  <ol>
    <li>
      two
    </li>
    <li>
      one
    </li>
    <li>
      five
    </li>
    <li>
      six
    </li>
    <li>
      seven
    </li>
  </ol>,
]
`;

exports[`Storyshots TabPicker None Selected 1`] = `
Array [
  <div
    className="react-dual-listbox rdl-has-header"
    id="tab-picker"
  >
    <div
      className="rdl-list-box rdl-available"
    >
      <label
        className="rdl-control-label"
        htmlFor="tab-picker-available"
      >
        Other Available Maps
      </label>
      <div
        className="rdl-control-container"
      >
        <select
          className="rdl-control"
          disabled={false}
          id="tab-picker-available"
          multiple={true}
          onChange={[Function]}
          onDoubleClick={[Function]}
          onKeyUp={[Function]}
          value={Array []}
        >
          <option
            data-real-value="\\"one\\""
            id="tab-picker-option-one"
            value="one"
          >
            First One
          </option>
          <option
            data-real-value="\\"two\\""
            id="tab-picker-option-two"
            value="two"
          >
            Second One
          </option>
          <option
            data-real-value="\\"three\\""
            id="tab-picker-option-three"
            value="three"
          >
            Third One
          </option>
          <option
            data-real-value="\\"four\\""
            id="tab-picker-option-four"
            value="four"
          >
            Fourth One
          </option>
          <option
            data-real-value="\\"five\\""
            id="tab-picker-option-five"
            value="five"
          >
            Fifth One
          </option>
          <option
            data-real-value="\\"six\\""
            id="tab-picker-option-six"
            value="six"
          >
            Sixth One
          </option>
          <option
            data-real-value="\\"seven\\""
            id="tab-picker-option-seven"
            value="seven"
          >
            Seventh One
          </option>
          <option
            data-real-value="\\"eight\\""
            id="tab-picker-option-eight"
            value="eight"
          >
            Eighth One
          </option>
        </select>
      </div>
    </div>
    <div
      className="rdl-actions"
    >
      <div
        className="rdl-actions-right"
      >
        <button
          className="rdl-move rdl-move-all rdl-move-right"
          disabled={false}
          id="tab-picker-move-all-right"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-right"
          />
          <span
            className="fa fa-chevron-right"
          />
        </button>
        <button
          className="rdl-move rdl-move-right"
          disabled={false}
          id="tab-picker-move-right"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-right"
          />
        </button>
      </div>
      <div
        className="rdl-actions-left"
      >
        <button
          className="rdl-move rdl-move-left"
          disabled={false}
          id="tab-picker-move-left"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-left"
          />
        </button>
        <button
          className="rdl-move rdl-move-all rdl-move-left"
          disabled={false}
          id="tab-picker-move-all-left"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-left"
          />
          <span
            className="fa fa-chevron-left"
          />
        </button>
      </div>
    </div>
    <div
      className="rdl-list-box rdl-selected"
    >
      <label
        className="rdl-control-label"
        htmlFor="tab-picker-selected"
      >
        Maps Displayed (max=6)
      </label>
      <div
        className="rdl-control-container"
      >
        <select
          className="rdl-control"
          disabled={false}
          id="tab-picker-selected"
          multiple={true}
          onChange={[Function]}
          onDoubleClick={[Function]}
          onKeyUp={[Function]}
          value={Array []}
        />
      </div>
    </div>
    <div
      className="rdl-actions"
    >
      <button
        className="rdl-move rdl-move-up"
        disabled={false}
        id="tab-picker-move-up"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fa fa-chevron-up"
        />
      </button>
      <button
        className="rdl-move rdl-move-down"
        disabled={false}
        id="tab-picker-move-down"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fa fa-chevron-down"
        />
      </button>
    </div>
    <input
      disabled={false}
      name={null}
      type="hidden"
      value=""
    />
  </div>,
  <br />,
  "Selected Ids:",
  <ol />,
]
`;

exports[`Storyshots TabPicker Selected 1`] = `
Array [
  <div
    className="react-dual-listbox rdl-has-header"
    id="tab-picker"
  >
    <div
      className="rdl-list-box rdl-available"
    >
      <label
        className="rdl-control-label"
        htmlFor="tab-picker-available"
      >
        Other Available Maps
      </label>
      <div
        className="rdl-control-container"
      >
        <select
          className="rdl-control"
          disabled={false}
          id="tab-picker-available"
          multiple={true}
          onChange={[Function]}
          onDoubleClick={[Function]}
          onKeyUp={[Function]}
          value={Array []}
        >
          <option
            data-real-value="\\"three\\""
            id="tab-picker-option-three"
            value="three"
          >
            Third One
          </option>
          <option
            data-real-value="\\"four\\""
            id="tab-picker-option-four"
            value="four"
          >
            Fourth One
          </option>
          <option
            data-real-value="\\"six\\""
            id="tab-picker-option-six"
            value="six"
          >
            Sixth One
          </option>
          <option
            data-real-value="\\"seven\\""
            id="tab-picker-option-seven"
            value="seven"
          >
            Seventh One
          </option>
          <option
            data-real-value="\\"eight\\""
            id="tab-picker-option-eight"
            value="eight"
          >
            Eighth One
          </option>
        </select>
      </div>
    </div>
    <div
      className="rdl-actions"
    >
      <div
        className="rdl-actions-right"
      >
        <button
          className="rdl-move rdl-move-all rdl-move-right"
          disabled={false}
          id="tab-picker-move-all-right"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-right"
          />
          <span
            className="fa fa-chevron-right"
          />
        </button>
        <button
          className="rdl-move rdl-move-right"
          disabled={false}
          id="tab-picker-move-right"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-right"
          />
        </button>
      </div>
      <div
        className="rdl-actions-left"
      >
        <button
          className="rdl-move rdl-move-left"
          disabled={false}
          id="tab-picker-move-left"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-left"
          />
        </button>
        <button
          className="rdl-move rdl-move-all rdl-move-left"
          disabled={false}
          id="tab-picker-move-all-left"
          onClick={[Function]}
          type="button"
        >
          <span
            className="fa fa-chevron-left"
          />
          <span
            className="fa fa-chevron-left"
          />
        </button>
      </div>
    </div>
    <div
      className="rdl-list-box rdl-selected"
    >
      <label
        className="rdl-control-label"
        htmlFor="tab-picker-selected"
      >
        Maps Displayed (max=6)
      </label>
      <div
        className="rdl-control-container"
      >
        <select
          className="rdl-control"
          disabled={false}
          id="tab-picker-selected"
          multiple={true}
          onChange={[Function]}
          onDoubleClick={[Function]}
          onKeyUp={[Function]}
          value={Array []}
        >
          <option
            data-index={0}
            data-real-value="\\"two\\""
            id="tab-picker-option-two"
            value="two"
          >
            Second One
          </option>
          <option
            data-index={1}
            data-real-value="\\"one\\""
            id="tab-picker-option-one"
            value="one"
          >
            First One
          </option>
          <option
            data-index={2}
            data-real-value="\\"five\\""
            id="tab-picker-option-five"
            value="five"
          >
            Fifth One
          </option>
        </select>
      </div>
    </div>
    <div
      className="rdl-actions"
    >
      <button
        className="rdl-move rdl-move-up"
        disabled={false}
        id="tab-picker-move-up"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fa fa-chevron-up"
        />
      </button>
      <button
        className="rdl-move rdl-move-down"
        disabled={false}
        id="tab-picker-move-down"
        onClick={[Function]}
        type="button"
      >
        <span
          className="fa fa-chevron-down"
        />
      </button>
    </div>
    <input
      disabled={false}
      name={null}
      type="hidden"
      value="two,one,five"
    />
  </div>,
  <br />,
  "Selected Ids:",
  <ol>
    <li>
      two
    </li>
    <li>
      one
    </li>
    <li>
      five
    </li>
  </ol>,
]
`;
